Replace non-standard function call fdopen64() with fdopen(). The former is not available on most platforms and not needed anyway because O_LARGEFILE flag is set earlier in the code. Bug 689175.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8229 a1074d23-0009-0410-80fe-cf8c14f379e6